# hvar

./: CMakeLists.txt  README.txt
Data/: EDD_CF2_data.txt
Documentation/: minvar_documentation.tex
Documentation/Figures/: Figure_7_bad.eps  hist_b.eps  hist_b_bad.eps  hist_l.eps  hist_l_bad.eps
Figures/: Figure_13.py  Figure_14.py  Figure_15_a.py  Figure_15_b.py  Figure_1_a.py  Figure_1_b.py  Figure_2.py  Figure_23_a.py  Figure_23_b.py  Figure_3_a.py  Figure_3_b.py  Figure_4_6.py  Figure_7_a.py  Figure_7_b.py  Figure_8.py  Figure_9_a.py  Figure_9_b.py  histogram_b.gnu  histogram_l.gnu
include/: Figures.hpp  boost_offset.hpp  gamma.hpp  get_data.hpp  hvar.hpp  scanner.hpp
src/: Figure_13.cpp  Figure_14.cpp  Figure_15.cpp  Figure_1_a.cpp  Figure_1_b.cpp  Figure_2.cpp  Figure_23.cpp  Figure_3.cpp  Figure_4_6.cpp  Figure_7.cpp  Figure_8.cpp  Figure_9.cpp  Figures.cpp  boost_offset.cpp  example_scanner.cpp  gamma_test.cpp  get_data.cpp  hvar.cpp  main.cpp  scanner.cpp
